Settings page with animations and shadow.

--- a/XamlBrewer.UWP.IEXCloud.Sample/XamlBrewer.UWP.IEXCloud.Sample.csproj
+++ b/XamlBrewer.UWP.IEXCloud.Sample/XamlBrewer.UWP.IEXCloud.Sample.csproj
@@ -119,6 +119,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\PanelExtensions.cs" />
     <Compile Include="Services\FormattingService.cs" />
     <Compile Include="Services\IEXCloudService.cs" />
     <Compile Include="Services\Settings\ObservableSettings.cs" />
