--- a/XamlBrewer.UWP.IEXCloud.Sample/XamlBrewer.UWP.IEXCloud.Sample.csproj
+++ b/XamlBrewer.UWP.IEXCloud.Sample/XamlBrewer.UWP.IEXCloud.Sample.csproj
@@ -196,7 +196,7 @@
       <Version>6.2.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.4.0-prerelease.200422001</Version>
+      <Version>2.4.0</Version>
     </PackageReference>
     <PackageReference Include="Telerik.UI.for.UniversalWindowsPlatform">
       <Version>1.0.1.8</Version>
