--- a/XamlBrewer.UWP.IEXCloud.Sample/XamlBrewer.UWP.IEXCloud.Sample.csproj
+++ b/XamlBrewer.UWP.IEXCloud.Sample/XamlBrewer.UWP.IEXCloud.Sample.csproj
@@ -119,6 +119,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\NavigationViewExtensions.cs" />
     <Compile Include="Controls\PanelExtensions.cs" />
     <Compile Include="Models\PorfolioItem.cs" />
     <Compile Include="Services\FormattingService.cs" />
