--- a/XamlBrewer.UWP.IEXCloud.Sample/XamlBrewer.UWP.IEXCloud.Sample.csproj
+++ b/XamlBrewer.UWP.IEXCloud.Sample/XamlBrewer.UWP.IEXCloud.Sample.csproj
@@ -198,7 +198,7 @@
       <Version>6.2.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.4.2</Version>
+      <Version>2.5.0-prerelease.200708003</Version>
     </PackageReference>
     <PackageReference Include="Telerik.UI.for.UniversalWindowsPlatform">
       <Version>1.0.1.9</Version>
